[Large change] Wrote and added multiple geometry codes for multiple obstacle handling, and also debugged the transformation into 2d plane, and also visualization changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(3d_visibility_graph)
+project(visibility_graph)
 
 # Set target C++ standard and required compiler features
 set(CMAKE_CXX_STANDARD 14)
