--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>3d_visibility_graph</name>
+  <name>visibility_graph</name>
   <version>0.0.0</version>
-  <description>3d_visibility_graph</description>
+  <description>visibility_graph</description>
   <maintainer email="matthewoots@gmail.com">Matthew Woo</maintainer>
   <license>TODO</license>
 
