Added in a new submodule consisting of the earlier codes, but still buggy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(visibility_graph)
+project(visibility_graph_ros)
 
 # Set target C++ standard and required compiler features
 set(CMAKE_CXX_STANDARD 14)
@@ -25,9 +25,10 @@ catkin_package(
     Eigen3
 )
 
+add_subdirectory(3dvg)
+
 include_directories(
     include
-    VisiLibity1/src
     ${catkin_INCLUDE_DIRS}
     ${EIGEN3_INCLUDE_DIRS}
 )
@@ -35,8 +36,7 @@ link_directories(${PCL_LIBRARY_DIRS})
 
 add_executable(${PROJECT_NAME}_node 
     src/main.cpp
-    src/visibility.cpp
-    VisiLibity1/src/visilibity.cpp
+    src/visibility_ros.cpp
 )
 
 ## Add cmake target dependencies of the executable
@@ -48,5 +48,6 @@ add_dependencies(${PROJECT_NAME}_node
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(${PROJECT_NAME}_node
+  visibility_graph
   ${catkin_LIBRARIES}
 )
