--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "VisiLibity1"]
-	path = VisiLibity1
-	url = git@github.com:karlobermeyer/VisiLibity1.git
+[submodule "3dvg"]
+	path = 3dvg
+	url = git@github.com:matthewoots/3dvg.git
